# parallel-dense-mst

./: .gitignore  .gitmodules  CMakeLists.txt  MST.80s-13068,thinkpad-e495.btr  MST.80s-13069,thinkpad-e495.btr  MST.80s-13070,thinkpad-e495.btr  MST.80s-13071,thinkpad-e495.btr  MST.80s-6144,thinkpad-e495.btr  MST.80s-6145,thinkpad-e495.btr  MST.80s-6146,thinkpad-e495.btr  MST.80s-6147,thinkpad-e495.btr  MST.80s-6430,thinkpad-e495.btr  MST.80s-6431,thinkpad-e495.btr  MST.80s-6432,thinkpad-e495.btr  MST.80s-6433,thinkpad-e495.btr  MST.80s-6702,thinkpad-e495.btr  MST.80s-6703,thinkpad-e495.btr  MST.80s-6704,thinkpad-e495.btr  MST.80s-6705,thinkpad-e495.btr  MST.80s-8153,thinkpad-e495.btr  MST.80s-8614,thinkpad-e495.btr  MST.80s-8851,thinkpad-e495.btr  MST.80s-8866,thinkpad-e495.btr  MST.80s-9070,thinkpad-e495.btr  MST.80s-9076,thinkpad-e495.btr  MST.80s-9291,thinkpad-e495.btr  README.md  main.cpp  mpi_helloworld.c  mpi_helloworld.cpp  runAllAlgorithms.sh
Latex/: Bib.bib  Bib.bib.blg  Main.aux  Main.bbl  Main.bcf  Main.blg  Main.loa  Main.lof  Main.run.xml  Main.tex  Main.tex.blg  Main.toc
Latex/modules/: 7-Fazit.aux  (+15 more)
algorithms/: boruvka_allreduce.hpp  boruvka_then_merge.hpp  dense_boruvka.hpp  filter_kruskal.hpp  kruskal.hpp  mergeMST.hpp  mixedMerge.hpp
commands/: commandParser.hpp
executions/: csvWriter.hpp  executeAlgorithm.hpp  executor.hpp  generateGraph.hpp
generateGraphs/: generateGraph.cpp  generateGraph.hpp
include/: definitions.hpp
plots/: boruvka-thread_bar.py  boruvkaMerge_bar.py  boruvkaMerge_boxplot.py  boruvkaMerge_plot.py  boruvka_bar.py  boruvka_boxplot.py  boruvka_message_overlap.py  boruvka_piechart.py  boruvka_plot.py  boruvka_plot_bar.py  csvBoxplotWriter.hpp  csvWriter.hpp  makePlots.sh  mergeMST_plot.py  mergeMST_treefactor.py  merge_bar.py  merge_boxplot.py  merge_plot_bar.py  merge_treefactor.py  mixedMerge_bar.py  mixedMerge_boxplot.py  sequential_plot.py  strong-scale_plot.py  strongscale.py  weak-scale_plot.py
(+14 files in other folders)
